<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">


    <android.support.v7.widget.CardView
        android:id="@+id/log_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="#17F57C00"
        app:cardCornerRadius="5dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:cardElevation="0dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignTop="@+id/log_cardview"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/user_signup_info_input"
                android:inputType="textEmailAddress"
                android:hint="@string/txt_name" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/user_signup_info_input"
                android:inputType="textEmailAddress"
                android:hint="@string/txt_email" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/user_signup_info_input"
                android:hint="@string/txt_password"
                android:inputType="textPassword" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/user_signup_info_input"
                android:hint="@string/txt_confirm_password"
                android:inputType="textPassword" />

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="10dp">

                <Button
                    android:id="@+id/log_btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00dddddd"
                    android:drawablePadding="10dp"
                    android:fontFamily="monospace"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="#F57C00"
                    android:text="@string/txt_sign_up"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="bottom|end">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_already_registered" />

                <Button
                    android:id="@+id/signup_btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/button_stroke_style"
                    android:fontFamily="monospace"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/txt_login"
                    android:textColor="#10b150"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>
    <!--
        <ProgressBar
            android:id="@+id/log_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:visibility="visible"/>-->

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_bt_logo"
        android:layout_alignTop="@id/log_cardview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-60dp"/>


</RelativeLayout>